crates/simpl-syntax2/src/snapshots/simpl_syntax2__test__function_application-2.snap
---
source: crates/simpl-syntax2/src/test.rs
expression: parse(src).unwrap()
---
App {
    func: App {
        func: Var {
            name: "f",
        },
        arg: Var {
            name: "g",
        },
    },
    arg: Var {
        name: "x",
    },
}
