crates/simpl-syntax2/src/snapshots/simpl_syntax2__test__if_then_else.snap
---
source: crates/simpl-syntax2/src/test.rs
expression: parse(src).unwrap()
---
If {
    test: Lit {
        val: Bool(
            true,
        ),
    },
    then_branch: Lit {
        val: Int(
            1,
        ),
    },
    else_branch: Lit {
        val: Int(
            0,
        ),
    },
}
