crates/simpl-syntax2/src/snapshots/simpl_syntax2__test__lambda_abstraction-2.snap
---
source: crates/simpl-syntax2/src/test.rs
expression: parse(src).unwrap()
---
Lambda {
    params: [
        "x",
        "y",
    ],
    body: Var {
        name: "y",
    },
}
