crates/simpl-syntax2/src/snapshots/simpl_syntax2__test__lambda_abstraction.snap
---
source: crates/simpl-syntax2/src/test.rs
expression: parse(src).unwrap()
---
Lambda {
    params: [
        "x",
    ],
    body: Var {
        name: "x",
    },
}
