crates/simpl-syntax2/src/snapshots/simpl_syntax2__test__letrec_binding.snap
---
source: crates/simpl-syntax2/src/test.rs
expression: parse(src).unwrap()
---
Let {
    bindings: [
        (
            "f",
            Lambda {
                params: [
                    "x",
                ],
                body: App {
                    func: Var {
                        name: "f",
                    },
                    arg: Var {
                        name: "x",
                    },
                },
            },
        ),
    ],
    body: Var {
        name: "f",
    },
}
