crates/simpl-syntax2/src/snapshots/simpl_syntax2__test__literal-2.snap
---
source: crates/simpl-syntax2/src/test.rs
expression: parse(src).unwrap()
---
Lit {
    val: Float(
        123.456,
    ),
}
