crates/simpl-syntax2/src/snapshots/simpl_syntax2__test__literal.snap
---
source: crates/simpl-syntax2/src/test.rs
expression: parse(src).unwrap()
---
Lit {
    val: Int(
        123,
    ),
}
