crates/simpl-syntax2/src/snapshots/simpl_syntax2__test__var.snap
---
source: crates/simpl-syntax2/src/test.rs
expression: parse(src).unwrap()
---
Var {
    name: "abc",
}
